--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - run |
+      - run: |
           ts=`date +%Y%m%d-%H%M%S`
           mkdir output
           mkdir -p output/$ts
